--- a/Diving Log/Diving Log/Base.lproj/Main.storyboard
+++ b/Diving Log/Diving Log/Base.lproj/Main.storyboard
@@ -1,26 +1,210 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SKU-Tk-N7h">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item-->
+        <scene sceneID="c3f-Wm-daQ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <navigationController id="xUi-rY-qKI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Xgi-1M-xRq"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Cah-no-Ey9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="s4K-Lo-fZX" kind="relationship" relationship="rootViewController" id="fBD-S4-bcA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a4N-Ky-nQT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2509" y="-2899"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Q1i-Ml-Tst">
+            <objects>
+                <viewController id="s4K-Lo-fZX" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="rwe-kG-SXU"/>
+                        <viewControllerLayoutGuide type="bottom" id="hix-Tx-rua"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="qtw-zE-OfR">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.96456915139999999" green="0.41194969370000001" blue="0.60810964420000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qd9-bg-cwT"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cOG-lI-Q9o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1665" y="-2917"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="LkH-g4-NjI">
+            <objects>
+                <viewController id="WaE-u2-gXW" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sqY-9j-qKE"/>
+                        <viewControllerLayoutGuide type="bottom" id="lpw-WI-HGz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MqI-Rz-0PA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.13101931019999999" green="0.93979328640000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="oGF-Wr-seo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sgt-Xw-8ac" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1697" y="-2093"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="jM8-Za-sKE">
+            <objects>
+                <navigationController id="yOU-KO-IwN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="h9V-iE-krk"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DFY-hy-Hmh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="WaE-u2-gXW" kind="relationship" relationship="rootViewController" id="bLt-VV-6Iq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C7h-vT-P1N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2489" y="-2132"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Xjm-SQ-Naz">
+            <objects>
+                <navigationController id="HKA-1w-nqH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qrr-mP-p8q"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yVD-fZ-Jah">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="r5R-Yz-riK" kind="relationship" relationship="rootViewController" id="ThT-zd-wRi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PeW-6r-6HO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2447" y="352"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="PAv-us-MjC">
+            <objects>
+                <navigationController id="jRl-ba-d7e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="AOf-Ih-AkN"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gkm-vc-QnO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="AeL-rk-yiT" kind="relationship" relationship="rootViewController" id="2kD-lb-9mV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nD1-6g-2Fc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2489" y="-1316"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hKK-gg-Nam">
+            <objects>
+                <viewController id="AeL-rk-yiT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6tB-ZG-DwQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="xJd-bm-DaN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yvX-mU-r6g">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.84758815359999995" blue="0.1207672764" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xWM-Lo-vPY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2ku-2p-yJE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1665" y="-1229"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="rgx-pe-GZX">
+            <objects>
+                <viewController id="hBl-SP-jYJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lL6-M7-8Af"/>
+                        <viewControllerLayoutGuide type="bottom" id="geh-O7-PCN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ycl-c1-gG9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.45534915149999999" blue="0.071501854749999996" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="MRm-yV-vDg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ab3-Ad-gAY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1657" y="-525"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xoI-A2-qIb">
+            <objects>
+                <viewController id="r5R-Yz-riK" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KF9-Fu-gVL"/>
+                        <viewControllerLayoutGuide type="bottom" id="ffj-Vb-5zx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Yd-im-x6Z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.1647058874" green="0.98431378599999997" blue="0.18431372939999999" alpha="1" colorSpace="deviceRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="95V-2M-AVD"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vdp-EE-4Zs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1657" y="251"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="ePf-QZ-Iug">
+            <objects>
+                <navigationController id="uUE-0g-iJs" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Uja-OD-laj"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hvS-4y-MUX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hBl-SP-jYJ" kind="relationship" relationship="rootViewController" id="Bb6-9f-awm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mLg-JD-IGe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2455" y="-464"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="XZb-gG-YY3">
+            <objects>
+                <tabBarController id="SKU-Tk-N7h" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="eqj-kK-Wpc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="xUi-rY-qKI" kind="relationship" relationship="viewControllers" id="rkY-0e-3TU"/>
+                        <segue destination="yOU-KO-IwN" kind="relationship" relationship="viewControllers" id="qXE-O2-tPD"/>
+                        <segue destination="jRl-ba-d7e" kind="relationship" relationship="viewControllers" id="v5R-zh-QOg"/>
+                        <segue destination="uUE-0g-iJs" kind="relationship" relationship="viewControllers" id="KUH-ZQ-nV7"/>
+                        <segue destination="HKA-1w-nqH" kind="relationship" relationship="viewControllers" id="BXX-6v-U1d"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="alQ-ba-mC7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3729" y="-1926"/>
         </scene>
     </scenes>
 </document>
